--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-Log4Net/**/bin/**
-Log4Net/**/obj/**
-IISLogs/**/bin/**
-IISLogs/**/obj/**
+**/**/bin/**
+**/**/obj/**
+/**/**/bin/**
+/**/**/obj/**
 /*/.vs/
 /*/*/.vs/
